# docs/swagger.json
@@ -42,7 +42,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.statusResponse"
                         }
                     },
                     "400": {
@@ -200,6 +200,13 @@
                         "description": "user's id",
                         "name": "userId",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit for post's comments",
+                        "name": "commentsLimit",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -694,19 +701,24 @@
                     }
                 },
                 "content": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Occaecat quis officia pariatur non aliquip culpa id elit amet sit occaecat ex sunt ullamco duis reprehenderit in esse. Culpa minim nulla pariatur voluptate ea proident dolor velit eu do labore ut."
                 },
                 "date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2021-01-01T00:00:00Z"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 732436
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Post title"
                 },
                 "users-id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 6296
                 }
             }
         },
